documentation and dependencies fix

--- a/docs/docs/integrations/document_loaders/dedoc.ipynb
+++ b/docs/docs/integrations/document_loaders/dedoc.ipynb
@@ -5,24 +5,51 @@
    "id": "6b74f73d-1763-42d0-9c24-8f65f445bb72",
    "metadata": {},
    "source": [
-    "# Dedoc"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e83cdaf4-9756-4e14-9ae6-136e5513f925",
-   "metadata": {},
-   "source": [
-    ">[Dedoc](https://dedoc.readthedocs.io) is an [open-source](https://github.com/ispras/dedoc)\n",
-    ">library/service that extracts texts, tables, attached files and document structure\n",
-    ">(e.g., titles, list items, etc.) from files of various formats.\n",
-    ">\n",
-    ">`Dedoc` supports `DOCX`, `XLSX`, `PPTX`, `EML`, `HTML`, `PDF`, images and more.\n",
-    ">Full list of supported formats can be found [here](https://dedoc.readthedocs.io/en/latest/#id1).\n",
+    "# Dedoc\n",
     "\n",
     "This sample demonstrates the use of `Dedoc` in combination with `LangChain` as a `DocumentLoader`.\n",
     "\n",
-    "Installation instruction is given [here](https://dedoc.readthedocs.io/en/latest/getting_started/installation.html)."
+    "## Overview\n",
+    "\n",
+    "[Dedoc](https://dedoc.readthedocs.io) is an [open-source](https://github.com/ispras/dedoc)\n",
+    "library/service that extracts texts, tables, attached files and document structure\n",
+    "(e.g., titles, list items, etc.) from files of various formats.\n",
+    "\n",
+    "`Dedoc` supports `DOCX`, `XLSX`, `PPTX`, `EML`, `HTML`, `PDF`, images and more.\n",
+    "Full list of supported formats can be found [here](https://dedoc.readthedocs.io/en/latest/#id1).\n",
+    "\n",
+    "\n",
+    "### Integration details\n",
+    "\n",
+    "| Class                                                                                                                                                | Package                                                                                        | Local | Serializable | JS support |\n",
+    "|:-----------------------------------------------------------------------------------------------------------------------------------------------------|:-----------------------------------------------------------------------------------------------|:-----:|:------------:|:----------:|\n",
+    "| [DedocFileLoader](https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.dedoc.DedocFileLoader.html)       | [langchain_community](https://api.python.langchain.com/en/latest/community_api_reference.html) |   ❌   |     beta     |     ❌      |\n",
+    "| [DedocPDFLoader](https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.pdf.DedocPDFLoader.html)           | [langchain_community](https://api.python.langchain.com/en/latest/community_api_reference.html) |   ❌   |     beta     |     ❌      | \n",
+    "| [DedocAPIFileLoader](https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.dedoc.DedocAPIFileLoader.html) | [langchain_community](https://api.python.langchain.com/en/latest/community_api_reference.html) |   ❌   |     beta     |     ❌      | \n",
+    "\n",
+    "\n",
+    "### Loader features\n",
+    "\n",
+    "Methods for lazy loading and async loading are available, but in fact, document loading is executed synchronously.\n",
+    "\n",
+    "|       Source       | Document Lazy Loading | Async Support |\n",
+    "|:------------------:|:---------------------:|:-------------:| \n",
+    "|  DedocFileLoader   |           ❌           |       ❌       |\n",
+    "|   DedocPDFLoader   |           ❌           |       ❌       | \n",
+    "| DedocAPIFileLoader |           ❌           |       ❌       | \n",
+    "\n",
+    "## Setup\n",
+    "\n",
+    "* To access `DedocFileLoader` and `DedocPDFLoader` document loaders, you'll need to install the `dedoc` integration package.\n",
+    "* To access `DedocAPIFileLoader`, you'll need to run the `Dedoc` service, e.g. `Docker` container (please see [the documentation](https://dedoc.readthedocs.io/en/latest/getting_started/installation.html#install-and-run-dedoc-using-docker) \n",
+    "for more details):\n",
+    "\n",
+    "```bash\n",
+    "docker pull dedocproject/dedoc\n",
+    "docker run -p 1231:1231\n",
+    "```\n",
+    "\n",
+    "`Dedoc` installation instruction is given [here](https://dedoc.readthedocs.io/en/latest/getting_started/installation.html)."
    ]
   },
   {
@@ -30,10 +57,113 @@
    "execution_count": 1,
    "id": "511c109d-a5c3-42ba-914e-5d1b385bc40f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# Install package\n",
     "%pip install --quiet \"dedoc[torch]\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6820c0e9-d56d-4899-b8c8-374760360e2b",
+   "metadata": {},
+   "source": [
+    "## Instantiation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c1f98cae-71ec-4d60-87fb-96c1a76851d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import DedocFileLoader\n",
+    "\n",
+    "loader = DedocFileLoader(\"./example_data/state_of_the_union.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d7bc2b3-73a0-4cd6-8014-cc7184aa9d4a",
+   "metadata": {},
+   "source": [
+    "## Load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b9097c14-6168-4726-819e-24abb9a63b13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nMadam Speaker, Madam Vice President, our First Lady and Second Gentleman. Members of Congress and t'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docs = loader.load()\n",
+    "docs[0].page_content[:100]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ed8bd46-0047-4ccc-b2d6-beb7761f7312",
+   "metadata": {},
+   "source": [
+    "## Lazy Load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6ae12d7e-8105-4bbe-9031-0e968475f6bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Madam Speaker, Madam Vice President, our First Lady and Second Gentleman. Members of Congress and t\n"
+     ]
+    }
+   ],
+   "source": [
+    "docs = loader.lazy_load()\n",
+    "\n",
+    "for doc in docs:\n",
+    "    print(doc.page_content[:100])\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8772ae40-6239-4751-bb2d-b4a9415c1ad1",
+   "metadata": {},
+   "source": [
+    "## API reference\n",
+    "\n",
+    "For detailed information on configuring and calling `Dedoc` loaders, please see the API references: \n",
+    "\n",
+    "* https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.dedoc.DedocFileLoader.html\n",
+    "* https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.pdf.DedocPDFLoader.html\n",
+    "* https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.dedoc.DedocAPIFileLoader.html"
    ]
   },
   {
@@ -64,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "50ffeeee-db12-4801-b208-7e32ea3d72ad",
    "metadata": {},
    "outputs": [
@@ -74,7 +204,7 @@
        "'\\nMadam Speaker, Madam Vice President, our First Lady and Second Gentleman. Members of Congress and the Cabinet. Justices of the Supreme Court. My fellow Americans.  \\n\\n\\n\\nLast year COVID-19 kept us apart. This year we are finally together again. \\n\\n\\n\\nTonight, we meet as Democrats Republicans and Independents. But most importantly as Americans. \\n\\n\\n\\nWith a duty to one another to the American people to '"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "eec54d31-ae7a-4a3c-aa10-4ae276b1e4c4",
    "metadata": {},
    "outputs": [
@@ -116,7 +246,7 @@
        "2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "bbeb2f8a-ac5e-4b59-8026-7ea3fc14c928",
    "metadata": {},
    "outputs": [
@@ -158,10 +288,10 @@
      "data": {
       "text/plain": [
        "('table',\n",
-       " '<table border=\"1\" style=\"border-collapse: collapse; width: 100%;\">\\n<tbody>\\n<tr>\\n<td colspan=\"1\" rowspan=\"1\">Team</td>\\n<td colspan=\"1\" rowspan=\"1\"> \"Payroll (millions)\"</td>\\n<td colspan=\"1\" rowspan=\"1\"')"
+       " '<table border=\"1\" style=\"border-collapse: collapse; width: 100%;\">\\n<tbody>\\n<tr>\\n<td colspan=\"1\" rowspan=\"1\">Team</td>\\n<td colspan=\"1\" rowspan=\"1\"> &quot;Payroll (millions)&quot;</td>\\n<td colspan=\"1\" r')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "bb9d6c1c-e24c-4979-88a0-38d54abd6332",
    "metadata": {},
    "outputs": [
@@ -202,7 +332,7 @@
        " '\\nContent-Type\\nmultipart/mixed; boundary=\"0000000000005d654405f082adb7\"\\nDate\\nFri, 23 Dec 2022 12:08:48 -0600\\nFrom\\nMallori Harrell <mallori@unstructured.io>\\nMIME-Version\\n1.0\\nMessage-ID\\n<CAPgNNXSzLVJ-d1OCX_TjFgJU7ugtQrjFybPtAMmmYZzphxNFYg@mail.gmail.com>\\nSubject\\nFake email with attachment\\nTo\\nMallori Harrell <mallori@unstructured.io>')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "0103a7f3-6b5e-4444-8f4d-83dd3724a9af",
    "metadata": {},
    "outputs": [
@@ -251,7 +381,7 @@
        "'\\n2\\n\\nZ. Shen et al.\\n\\n37], layout detection [38, 22], table detection [26], and scene text detection [4].\\n\\nA generalized learning-based framework dramatically reduces the need for the\\n\\nmanual speciﬁcation of complicated rules, which is the status quo with traditional\\n\\nmethods. DL has the potential to transform DIA pipelines and beneﬁt a broad\\n\\nspectrum of large-scale document digitization projects.\\n'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "211fc0b5-6080-4974-a6c1-f982bafd87d6",
    "metadata": {},
    "outputs": [
@@ -303,7 +433,7 @@
        "'\\nMadam Speaker, Madam Vice President, our First Lady and Second Gentleman. Members of Congress and the Cabinet. Justices of the Supreme Court. My fellow Americans.  \\n\\n\\n\\nLast year COVID-19 kept us apart. This year we are finally together again. \\n\\n\\n\\nTonight, we meet as Democrats Republicans and Independents. But most importantly as Americans. \\n\\n\\n\\nWith a duty to one another to the American people to '"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
