added more pydoc

--- a/docs/docs/integrations/llms/oci_model_deployment_endpoint.ipynb
+++ b/docs/docs/integrations/llms/oci_model_deployment_endpoint.ipynb
@@ -67,9 +67,10 @@
     "# Replace the endpoint uri and model name with your own\n",
     "# Using generic class as entry point, you will be able\n",
     "# to pass model parameters through model_kwargs during\n",
-    "# instaniation.\n",
+    "# instantiation.\n",
     "llm = OCIModelDeploymentLLM(\n",
     "    endpoint=\"https://modeldeployment.<region>.oci.customer-oci.com/<md_ocid>/predict\",\n",
+    "    model=\"odsc-llm\",\n",
     ")\n",
     "\n",
     "# Run the LLM\n",
@@ -140,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also supports native async invoke and streaming functionality:"
+    "### Asynchronous calls"
    ]
   },
   {
@@ -149,8 +150,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = \"Who is the first president of United States?\"\n",
-    "await llm.ainvoke(message)"
+    "await llm.ainvoke(\"Tell me a joke.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Streaming calls"
    ]
   },
   {
@@ -159,8 +166,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for chunk in llm.stream(message):\n",
+    "for chunk in llm.stream(\"Tell me a joke.\"):\n",
     "    print(chunk, end=\"\", flush=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## API reference\n",
+    "\n",
+    "For comprehensive details on all features and configurations, please refer to the API reference documentation for each class:\n",
+    "\n",
+    "* [OCIModelDeploymentLLM](https://api.python.langchain.com/en/latest/llms/langchain_community.llms.oci_data_science_model_deployment_endpoint.OCIModelDeploymentLLM.html)\n",
+    "* [OCIModelDeploymentVLLM](https://api.python.langchain.com/en/latest/llms/langchain_community.llms.oci_data_science_model_deployment_endpoint.OCIModelDeploymentVLLM.html)\n",
+    "* [OCIModelDeploymentTGI](https://api.python.langchain.com/en/latest/llms/langchain_community.llms.oci_data_science_model_deployment_endpoint.OCIModelDeploymentTGI.html)"
    ]
   }
  ],
