--- a/docs/docs/integrations/text_embedding/pinecone.ipynb
+++ b/docs/docs/integrations/text_embedding/pinecone.ipynb
@@ -36,15 +36,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-07-22T19:02:50.657460Z",
-     "start_time": "2024-07-22T19:02:42.370014Z"
-    }
-   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -53,7 +44,11 @@
     "os.environ[\"PINECONE_API_KEY\"] = os.getenv(\"PINECONE_API_KEY\") or getpass(\n",
     "    \"Enter your Pinecone API key: \"\n",
     ")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8162dbcbcf7d3d55"
   },
   {
    "cell_type": "markdown",
