add SDK example to docs

--- a/docs/docs/integrations/document_loaders/unstructured_file.ipynb
+++ b/docs/docs/integrations/document_loaders/unstructured_file.ipynb
@@ -350,6 +350,85 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a324a0db",
+   "metadata": {},
+   "source": [
+    "### Unstructured SDK Client\n",
+    "\n",
+    "Partitioning with the Unstructured API relies on the [Unstructured SDK\n",
+    "Client](https://docs.unstructured.io/api-reference/api-services/sdk).\n",
+    "\n",
+    "Below is an example showing how you can customize the client by using your own `requests.Session()`\n",
+    "and a `RetryConfig` object for more control over how failed requests are handled."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "58e55264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Preparing to split document for partition.\n",
+      "INFO: Concurrency level set to 5\n",
+      "INFO: Splitting pages 1 to 16 (16 total)\n",
+      "INFO: Determined optimal split size of 4 pages.\n",
+      "INFO: Partitioning 4 files with 4 page(s) each.\n",
+      "INFO: Partitioning set #1 (pages 1-4).\n",
+      "INFO: Partitioning set #2 (pages 5-8).\n",
+      "INFO: Partitioning set #3 (pages 9-12).\n",
+      "INFO: Partitioning set #4 (pages 13-16).\n",
+      "INFO: HTTP Request: POST https://api.unstructuredapp.io/general/v0/general \"HTTP/1.1 200 OK\"\n",
+      "INFO: HTTP Request: POST https://api.unstructuredapp.io/general/v0/general \"HTTP/1.1 200 OK\"\n",
+      "INFO: HTTP Request: POST https://api.unstructuredapp.io/general/v0/general \"HTTP/1.1 200 OK\"\n",
+      "INFO: Successfully partitioned set #1, elements added to the final result.\n",
+      "INFO: Successfully partitioned set #2, elements added to the final result.\n",
+      "INFO: Successfully partitioned set #3, elements added to the final result.\n",
+      "INFO: Successfully partitioned set #4, elements added to the final result.\n",
+      "INFO: Successfully partitioned the document.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "layout-parser-paper.pdf :  LayoutParser: A Uniﬁed Toolkit for Deep Learning Based Document Image Analysis\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from langchain_unstructured import UnstructuredLoader\n",
+    "from unstructured_client.utils import RetryConfig, BackoffStrategy\n",
+    "\n",
+    "loader = UnstructuredLoader(\n",
+    "    \"./example_data/layout-parser-paper.pdf\",\n",
+    "    api_key=\"FAKE_API_KEY\",\n",
+    "    partition_via_api=True,\n",
+    "    url=\"https://api.unstructuredapp.io/general/v0/general\",\n",
+    "    client=requests.Session(),\n",
+    "    retry_config=RetryConfig(\n",
+    "        strategy=\"backoff\",\n",
+    "        retry_connection_errors=True,\n",
+    "        backoff=BackoffStrategy(\n",
+    "            initial_interval=500,\n",
+    "            max_interval=60000,\n",
+    "            exponent=1.5,\n",
+    "            max_elapsed_time=900000,\n",
+    "        ),\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "docs = loader.load()\n",
+    "\n",
+    "print(docs[0].metadata[\"filename\"], \": \", docs[0].page_content[:100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c66fbeb3",
    "metadata": {},
    "source": [
@@ -373,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e9f1c20d",
    "metadata": {},
    "outputs": [
