--- a/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
+++ b/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
@@ -19,11 +19,11 @@
    "source": [
     "# ChatOCIModelDeploymentEndpoint\n",
     "\n",
-    "> [OCI Data Science](https://docs.oracle.com/en-us/iaas/data-science/using/home.htm) is a fully managed and serverless platform for data science teams to build, train, and manage machine learning models in the Oracle Cloud Infrastructure.\n",
+    "[OCI Data Science](https://docs.oracle.com/en-us/iaas/data-science/using/home.htm) is a fully managed and serverless platform for data science teams to build, train, and manage machine learning models in the Oracle Cloud Infrastructure.\n",
     "\n",
-    "This notebooks goes over how to use a chat model hosted on a [OCI Data Science Model Deployment](https://docs.oracle.com/en-us/iaas/data-science/using/model-dep-about.htm).\n",
+    "This notebooks goes over how to use a chat model hosted on a [OCI Data Science Model Deployment Service](https://docs.oracle.com/en-us/iaas/data-science/using/model-dep-about.htm).\n",
     "\n",
-    "To authenticate, [oracle-ads](https://accelerated-data-science.readthedocs.io/en/latest/user_guide/cli/authentication.html) has been used to automatically load credentials for invoking endpoint.\n",
+    "For authentication, the [oracle-ads](https://accelerated-data-science.readthedocs.io/en/latest/user_guide/cli/authentication.html) library is used to automatically load credentials required for invoking the endpoint.\n",
     "\n",
     "## Set up\n",
     "\n",
@@ -32,7 +32,7 @@
     "* `endpoint` : The REST endpoint url provided by the endpoint.\n",
     "\n",
     "### Deploy model\n",
-    "Check [Oracle GitHub samples repository](https://github.com/oracle-samples/oci-data-science-ai-samples/tree/main/model-deployment/containers/llama2) on how to deploy your chat model on OCI Data Science Model deployment.\n",
+    "You can easily deploy, fine-tune, and evaluate foundation models using the [AI Quick Actions](https://docs.oracle.com/en-us/iaas/data-science/using/ai-quick-actions.htm) on OCI Data Science Model deployment. For additional deployment examples, please visit the [Oracle GitHub samples repository](https://github.com/oracle-samples/oci-data-science-ai-samples/blob/main/ai-quick-actions/deploy-with-smc.md).\n",
     "\n",
     "### Policies\n",
     "Make sure to have the required [policies](https://docs.oracle.com/en-us/iaas/data-science/using/model-dep-policies-auth.htm#model_dep_policies_auth__predict-endpoint) to access the OCI Data Science Model Deployment endpoint.\n",
@@ -81,17 +81,42 @@
     "ads.set_auth(\"resource_principal\")\n",
     "\n",
     "# Create an instance of OCI Model Deployment Endpoint\n",
-    "# Replace the endpoint uri and model name with your own\n",
+    "# Replace the endpoint uri with your own\n",
+    "# Using generic class as entry point, you will be able\n",
+    "# to pass model parameters through model_kwargs during\n",
+    "# instantiation.\n",
     "chat = ChatOCIModelDeploymentEndpoint(\n",
-    "    model=\"odsc-llm\",\n",
     "    endpoint=\"https://modeldeployment.us-ashburn-1.oci.customer-oci.com/<ocid>/predict\",\n",
-    "    streaming=False,\n",
-    "    max_retries=3,\n",
-    "    stop=None,\n",
+    "    streaming=True,\n",
+    "    max_retries=1,\n",
     "    model_kwargs={\n",
     "        \"temperature\": 0.2,\n",
     "        \"max_tokens\": 512,\n",
-    "    },  # model params...\n",
+    "    },  # other model params...\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ads\n",
+    "from langchain_community.chat_models import ChatOCIModelDeploymentEndpointVLLM\n",
+    "\n",
+    "# Set authentication through ads\n",
+    "# Use resource principal are operating within a\n",
+    "# OCI service that has resource principal based\n",
+    "# authentication configured\n",
+    "ads.set_auth(\"resource_principal\")\n",
+    "\n",
+    "# Create an instance of OCI Model Deployment Endpoint\n",
+    "# Replace the endpoint uri and model name with your own\n",
+    "# Using framework specific class as entry point, you will\n",
+    "# be able to pass model parameters in constructor.\n",
+    "chat = ChatOCIModelDeploymentEndpointVLLM(\n",
+    "    endpoint=\"https://modeldeployment.<region>.oci.customer-oci.com/<md_ocid>/predict\",\n",
     ")"
    ]
   },
@@ -204,21 +229,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for running these examples in the notebook:\n",
-    "import nest_asyncio\n",
-    "import asyncio\n",
-    "\n",
-    "from langchain_community.chat_models import ChatOCIModelDeploymentEndpoint\n",
-    "\n",
-    "nest_asyncio.apply()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -234,9 +244,9 @@
     }
    ],
    "source": [
-    "system = (\n",
-    "    \"You are a helpful assistant that translates {input_language} to {output_language}.\"\n",
-    ")\n",
+    "from langchain_community.chat_models import ChatOCIModelDeploymentEndpoint\n",
+    "\n",
+    "system = \"You are a helpful translator that translates {input_language} to {output_language}.\"\n",
     "human = \"{text}\"\n",
     "prompt = ChatPromptTemplate.from_messages([(\"system\", system), (\"human\", human)])\n",
     "\n",
@@ -245,14 +255,12 @@
     ")\n",
     "chain = prompt | chat\n",
     "\n",
-    "asyncio.run(\n",
-    "    chain.ainvoke(\n",
-    "        {\n",
-    "            \"input_language\": \"English\",\n",
-    "            \"output_language\": \"Chinese\",\n",
-    "            \"text\": \"I love programming\",\n",
-    "        }\n",
-    "    )\n",
+    "await chain.ainvoke(\n",
+    "    {\n",
+    "        \"input_language\": \"English\",\n",
+    "        \"output_language\": \"Chinese\",\n",
+    "        \"text\": \"I love programming\",\n",
+    "    }\n",
     ")"
    ]
   },
@@ -284,19 +292,30 @@
    ],
    "source": [
     "import sys\n",
-    "import ads\n",
+    "import os\n",
     "\n",
     "from langchain_community.chat_models import ChatOCIModelDeploymentEndpoint\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
-    "ads.set_auth(\"resource_principal\")\n",
+    "# Set authentication through environment variables\n",
+    "# Use API Key setup when you are working from a local\n",
+    "# workstation or on platform which does not support\n",
+    "# resource principals.\n",
+    "os.environ[\"OCI_IAM_TYPE\"] = \"api_key\"\n",
+    "os.environ[\"OCI_CONFIG_PROFILE\"] = \"default\"\n",
+    "os.environ[\"OCI_CONFIG_LOCATION\"] = \"~/.oci\"\n",
+    "\n",
+    "# Set endpoint through environment variables\n",
+    "# Replace the endpoint uri with your own\n",
+    "os.environ[\"OCI_LLM_ENDPOINT\"] = (\n",
+    "    \"https://modeldeployment.<region>.oci.customer-oci.com/<md_ocid>/predict\"\n",
+    ")\n",
+    "\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
     "    [(\"human\", \"List out the 5 states in the United State.\")]\n",
     ")\n",
     "\n",
-    "chat = ChatOCIModelDeploymentEndpoint(\n",
-    "    endpoint=\"https://modeldeployment.us-ashburn-1.oci.customer-oci.com/<ocid>/predict\",\n",
-    ")\n",
+    "chat = ChatOCIModelDeploymentEndpoint()\n",
     "\n",
     "chain = prompt | chat\n",
     "\n",
@@ -358,8 +377,16 @@
    "source": [
     "## API reference\n",
     "\n",
-    "For detailed documentation of all ChatOCIModelDeploymentEndpoint features and configurations head to the [API reference](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpoint.html)."
+    "For comprehensive details on all features and configurations, please refer to the API reference documentation for each class:\n",
+    "\n",
+    "* [ChatOCIModelDeploymentEndpoint](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpoint.html)\n",
+    "* [ChatOCIModelDeploymentEndpointVLLM](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpointVLLM.html)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
