langchain-aws InMemoryVectorStore documentation updates

--- a/docs/docs/integrations/vectorstores/memorydb.ipynb
+++ b/docs/docs/integrations/vectorstores/memorydb.ipynb
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet  redis redisvl langchain-openai tiktoken"
+    "%pip install --upgrade --quiet  redis redisvl langchain-aws"
    ]
   },
   {
