Add ScrapingAnt - Web Scraping API document loader (notebook fix)

--- a/docs/docs/integrations/document_loaders/scrapingant.ipynb
+++ b/docs/docs/integrations/document_loaders/scrapingant.ipynb
@@ -14,7 +14,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Installation\n",
+    "## Setup\n",
+    "\n",
     "Install ScrapingAnt Python SDK and he required Langchain packages using pip:\n",
     "```shell\n",
     "pip install scrapingant-client langchain langchain-community\n",
@@ -24,9 +25,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#### Usage"
-   ]
+   "source": "## Instantiation"
   },
   {
    "cell_type": "code",
@@ -43,11 +42,7 @@
     "    [\"https://scrapingant.com/\", \"https://example.com/\"],  # List of URLs to scrape\n",
     "    api_key=\"<YOUR_SCRAPINGANT_TOKEN>\",  # Get your API key from https://scrapingant.com/\n",
     "    continue_on_failure=True,  # Ignore unprocessable web pages and log their exceptions\n",
-    ")\n",
-    "\n",
-    "# Load documents from URLs as markdown\n",
-    "documents = scrapingant_loader.load()\n",
-    "print(documents)"
+    ")\n"
    ],
    "outputs": [
     {
@@ -89,11 +84,7 @@
     "    api_key=\"<YOUR_SCRAPINGANT_TOKEN>\",  # Get your API key from https://scrapingant.com/\n",
     "    continue_on_failure=True,  # Ignore unprocessable web pages and log their exceptions\n",
     "    scrape_config=scrapingant_config  # Pass the scrape_config object\n",
-    ")\n",
-    "\n",
-    "# Load documents from URLs as markdown\n",
-    "documents = scrapingant_loader.load()\n",
-    "print(documents)"
+    ")"
    ],
    "outputs": [
     {
@@ -110,7 +101,31 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "#### Free Plan Limitations\n",
+    "## Load\n",
+    "\n",
+    "Use the `load` method to scrape the web pages and get the extracted markdown content.\n"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Load documents from URLs as markdown\n",
+    "documents = scrapingant_loader.load()\n",
+    "print(documents)"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## API reference\n",
+    "\n",
+    "This loader is based on the [ScrapingAnt Python SDK](). For more configuration options, see the [common arguments](https://github.com/ScrapingAnt/scrapingant-client-python/tree/master?tab=readme-ov-file#common-arguments)\n",
+    "\n",
+    "### Free Plan Limitations\n",
     "\n",
     "The free plan of ScrapingAnt has the following limitations:\n",
     "- 10000 API credits per month\n",
