Add ScrapingAnt - Web Scraping API document loader (notebook fix)

--- a/docs/docs/integrations/document_loaders/scrapingant.ipynb
+++ b/docs/docs/integrations/document_loaders/scrapingant.ipynb
@@ -123,7 +123,7 @@
    "source": [
     "## API reference\n",
     "\n",
-    "This loader is based on the [ScrapingAnt Python SDK](). For more configuration options, see the [common arguments](https://github.com/ScrapingAnt/scrapingant-client-python/tree/master?tab=readme-ov-file#common-arguments)\n",
+    "This loader is based on the [ScrapingAnt Python SDK](https://docs.scrapingant.com/python-client). For more configuration options, see the [common arguments](https://github.com/ScrapingAnt/scrapingant-client-python/tree/master?tab=readme-ov-file#common-arguments)\n",
     "\n",
     "### Free Plan Limitations\n",
     "\n",
