--- a/docs/docs/integrations/tools/databricks.ipynb
+++ b/docs/docs/integrations/tools/databricks.ipynb
@@ -47,9 +47,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.chat_models.databricks import ChatDatabricks\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo\")"
+    "llm = ChatDatabricks(endpoint=\"databricks-meta-llama-3-70b-instruct\")"
    ]
   },
   {
