Add ScrapingAnt - Web Scraping API document loader (notebook fix)

--- a/docs/docs/integrations/document_loaders/scrapingant.ipynb
+++ b/docs/docs/integrations/document_loaders/scrapingant.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ScrapingAnt\n",
+    "---\n",
+    "sidebar_label: ScrapingAnt\n",
+    "---\n",
+    "\n",
+    "# ScrapingAnt\n",
     "[ScrapingAnt](https://scrapingant.com/) is a web scraping API with headless browser capabilities, proxies, and anti-bot bypass. It allows for extracting web page data into accessible LLM markdown.\n",
     "\n",
     "This particular integration uses only Markdown extraction feature, but don't hesitate to [reach out to us](mailto:support@scrapingant.com) if you need more features provided by ScrapingAnt, but not yet implemented in this integration."
@@ -42,7 +46,7 @@
     "    [\"https://scrapingant.com/\", \"https://example.com/\"],  # List of URLs to scrape\n",
     "    api_key=\"<YOUR_SCRAPINGANT_TOKEN>\",  # Get your API key from https://scrapingant.com/\n",
     "    continue_on_failure=True,  # Ignore unprocessable web pages and log their exceptions\n",
-    ")\n"
+    ")"
    ],
    "outputs": [
     {
@@ -77,13 +81,11 @@
     "    \"proxy_country\": \"us\",  # Select a proxy location\n",
     "}\n",
     "\n",
-    "# for more configuration options, see https://github.com/ScrapingAnt/scrapingant-client-python/tree/master?tab=readme-ov-file#common-arguments\n",
-    "\n",
-    "scrapingant_loader = ScrapingAntLoader(\n",
+    "scrapingant_additional_config_loader = ScrapingAntLoader(\n",
     "    [\"https://scrapingant.com/\"],\n",
     "    api_key=\"<YOUR_SCRAPINGANT_TOKEN>\",  # Get your API key from https://scrapingant.com/\n",
     "    continue_on_failure=True,  # Ignore unprocessable web pages and log their exceptions\n",
-    "    scrape_config=scrapingant_config  # Pass the scrape_config object\n",
+    "    scrape_config=scrapingant_config,  # Pass the scrape_config object\n",
     ")"
    ],
    "outputs": [
@@ -123,16 +125,7 @@
    "source": [
     "## API reference\n",
     "\n",
-    "This loader is based on the [ScrapingAnt Python SDK](https://docs.scrapingant.com/python-client). For more configuration options, see the [common arguments](https://github.com/ScrapingAnt/scrapingant-client-python/tree/master?tab=readme-ov-file#common-arguments)\n",
-    "\n",
-    "### Free Plan Limitations\n",
-    "\n",
-    "The free plan of ScrapingAnt has the following limitations:\n",
-    "- 10000 API credits per month\n",
-    "- 1 concurrent request\n",
-    "- Certain domains are blocked\n",
-    "\n",
-    "You can signup for a free account at [ScrapingAnt](https://scrapingant.com/) to get your API key."
+    "This loader is based on the [ScrapingAnt Python SDK](https://docs.scrapingant.com/python-client). For more configuration options, see the [common arguments](https://github.com/ScrapingAnt/scrapingant-client-python/tree/master?tab=readme-ov-file#common-arguments)"
    ]
   }
  ],
