Add ScrapingAnt - Web Scraping API document loader (notebook fix for compliance)

--- a/docs/docs/integrations/document_loaders/scrapingant.ipynb
+++ b/docs/docs/integrations/document_loaders/scrapingant.ipynb
@@ -9,9 +9,21 @@
     "---\n",
     "\n",
     "# ScrapingAnt\n",
+    "## Overview\n",
     "[ScrapingAnt](https://scrapingant.com/) is a web scraping API with headless browser capabilities, proxies, and anti-bot bypass. It allows for extracting web page data into accessible LLM markdown.\n",
     "\n",
-    "This particular integration uses only Markdown extraction feature, but don't hesitate to [reach out to us](mailto:support@scrapingant.com) if you need more features provided by ScrapingAnt, but not yet implemented in this integration."
+    "This particular integration uses only Markdown extraction feature, but don't hesitate to [reach out to us](mailto:support@scrapingant.com) if you need more features provided by ScrapingAnt, but not yet implemented in this integration.\n",
+    "\n",
+    "### Integration details\n",
+    "\n",
+    "| Class                                                                                                                                                    | Package                                                                                        | Local | Serializable | JS support |\n",
+    "|:---------------------------------------------------------------------------------------------------------------------------------------------------------|:-----------------------------------------------------------------------------------------------|:-----:|:------------:|:----------:|\n",
+    "| [ScrapingAntLoader](https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.scrapingant.ScrapingAntLoader.html) | [langchain_community](https://api.python.langchain.com/en/latest/community_api_reference.html) |   ❌   |      ❌       |     ❌      | \n",
+    "\n",
+    "### Loader features\n",
+    "|      Source       | Document Lazy Loading | Async Support |\n",
+    "|:-----------------:|:---------------------:|:-------------:| \n",
+    "| ScrapingAntLoader |           ✅           |       ❌       | \n"
    ]
   },
   {
@@ -116,7 +128,30 @@
    "source": [
     "# Load documents from URLs as markdown\n",
     "documents = scrapingant_loader.load()\n",
+    "\n",
     "print(documents)"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Lazy Load\n",
+    "\n",
+    "Use the 'lazy_load' method to scrape the web pages and get the extracted markdown content lazily."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Lazy load documents from URLs as markdown\n",
+    "lazy_documents = scrapingant_loader.lazy_load()\n",
+    "\n",
+    "for document in lazy_documents:\n",
+    "    print(document)"
    ]
   },
   {
