added tgi chat model

--- a/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
+++ b/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
@@ -380,7 +380,8 @@
     "For comprehensive details on all features and configurations, please refer to the API reference documentation for each class:\n",
     "\n",
     "* [ChatOCIModelDeploymentEndpoint](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpoint.html)\n",
-    "* [ChatOCIModelDeploymentEndpointVLLM](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpointVLLM.html)"
+    "* [ChatOCIModelDeploymentEndpointVLLM](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpointVLLM.html)\n",
+    "* [ChatOCIModelDeploymentEndpointTGI](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpointTGI.html)"
    ]
   },
   {
