--- a/docs/docs/how_to/code_splitter.ipynb
+++ b/docs/docs/how_to/code_splitter.ipynb
@@ -53,17 +53,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9e4144de-d925-4d4c-91c3-685ef8baa57c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "langchain 0.1.0 requires langchain-core<0.2,>=0.1.7, but you have langchain-core 0.2.23 which is incompatible.\n",
+      "langchain 0.1.0 requires langsmith<0.1.0,>=0.0.77, but you have langsmith 0.1.93 which is incompatible.\n",
+      "langchain-community 0.0.11 requires langchain-core<0.2,>=0.1.8, but you have langchain-core 0.2.23 which is incompatible.\n",
+      "langchain-community 0.0.11 requires langsmith<0.1.0,>=0.0.63, but you have langsmith 0.1.93 which is incompatible.\n",
+      "langchain-openai 0.0.2 requires langchain-core<0.2,>=0.1.7, but you have langchain-core 0.2.23 which is incompatible.\n",
+      "\n",
+      "[notice] A new release of pip is available: 23.3.2 -> 24.1.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -qU langchain-text-splitters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a9e37aa1",
    "metadata": {},
    "outputs": [],
@@ -718,8 +741,54 @@
     "php_splitter = RecursiveCharacterTextSplitter.from_language(\n",
     "    language=Language.PHP, chunk_size=50, chunk_overlap=0\n",
     ")\n",
-    "haskell_docs = php_splitter.create_documents([PHP_CODE])\n",
-    "haskell_docs"
+    "php_docs = php_splitter.create_documents([PHP_CODE])\n",
+    "php_docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9fa62c1",
+   "metadata": {},
+   "source": [
+    "## PowerShell\n",
+    "Here's an example using the PowerShell text splitter:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e6893ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "POWERSHELL_CODE = \"\"\"\n",
+    "function Process-Numbers {\n",
+    "    param($numbers)\n",
+    "    foreach ($number in $numbers) {\n",
+    "        if (Is-Prime -number $number) {\n",
+    "            Write-Host \"$number is a prime number\"\n",
+    "        } else {\n",
+    "            Write-Host \"$number is not a prime number\"\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "function Test-ErrorHandling {\n",
+    "    try {\n",
+    "        $result = 1 / 0\n",
+    "    }\n",
+    "    catch {\n",
+    "        Write-Host \"Error: Division by zero\"\n",
+    "    }\n",
+    "    finally {\n",
+    "        Write-Host \"Cleanup can go here.\"\n",
+    "    }\n",
+    "}\n",
+    "\"\"\"\n",
+    "powershell_splitter = RecursiveCharacterTextSplitter.from_language(\n",
+    "    language=Language.POWERSHELL, chunk_size=50, chunk_overlap=0\n",
+    ")\n",
+    "powershell_docs = php_splitter.create_documents([PHP_CODE])\n",
+    "powershell_docs"
    ]
   }
  ],
@@ -739,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
