--- a/docs/docs/how_to/code_splitter.ipynb
+++ b/docs/docs/how_to/code_splitter.ipynb
@@ -787,7 +787,7 @@
     "powershell_splitter = RecursiveCharacterTextSplitter.from_language(\n",
     "    language=Language.POWERSHELL, chunk_size=50, chunk_overlap=0\n",
     ")\n",
-    "powershell_docs = php_splitter.create_documents([PHP_CODE])\n",
+    "powershell_docs = powershell_splitter.create_documents([POWERSHELL_CODE])\n",
     "powershell_docs"
    ]
   }
